--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "0.13.8",
+    "redux-persist": "^6.0.0",
     "sass": "1.59.3"
   },
   "devDependencies": {
