--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.3.2",
     "axios": "1.3.4",
+    "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
