--- a/package.json
+++ b/package.json
@@ -18,15 +18,19 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.9.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.0",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "0.13.8",
+    "recharts": "^2.10.2",
     "redux-persist": "^6.0.0",
     "sass": "1.59.3"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.3.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vitejs/plugin-react-swc": "3.0.0",
