--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@ant-design/icons": "5.0.1",
     "@reduxjs/toolkit": "1.9.3",
     "antd": "5.3.2",
-    "axios": "1.3.4",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.10",
     "moment": "^2.29.4",
     "react": "18.2.0",
@@ -34,6 +34,6 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "@vitejs/plugin-react-swc": "3.0.0",
-    "vite": "4.2.0"
+    "vite": "^4.2.0"
   }
 }
