--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.0.1",
-    "@reduxjs/toolkit": "1.9.3",
-    "antd": "5.3.2",
+    "@reduxjs/toolkit": "^1.9.3",
+    "antd": "^5.3.2",
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.3",
     "dayjs": "^1.11.10",
+    "formik": "^2.4.6",
     "moment": "^2.29.4",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-chartjs-2": "^5.2.0",
-    "react-countup": "^6.5.0",
-    "react-dom": "18.2.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^18.2.0",
     "react-icons": "4.8.0",
     "react-redux": "8.0.5",
     "react-router-dom": "6.9.0",
     "react-spinners": "0.13.8",
-    "recharts": "^2.10.2",
+    "recharts": "^2.13.3",
     "redux-persist": "^6.0.0",
-    "sass": "1.59.3"
+    "sass": "^1.59.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
